src/App.scss
.sidebar-btn-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;

  .sidebar-btn {
    transition: width 0.3s;
    width: 150px;
    padding: 1px 5px;
    border-radius: 40px;
    background: rgba(255, 255, 255, 0.05);
    color: #adadad;
    text-decoration: none;
    margin: 0 auto;
    height: 35px;
    display: flex;
    align-items: center;
    justify-content: center;
    text-overflow: ellipsis;
    overflow: hidden;

    span {
      margin-left: 5px;
      font-size: 13px;
    }

    &:hover {
      color: #dee2ec;
      ;
    }
  }
}


@media (min-width:1350px) {

  .container,
  .container-lg,
  .container-md,
  .container-sm,
  .container-xl {
    max-width: 1300px;
  }
}

.app-container {
  .header-container {
    .btn-login {
      border-radius: 5px;
      margin-right: 15px;
      padding: 0 15px;
      border: 1px solid #535353;
      height: 40px;
    }

    .btn-signup {
      border-radius: 5px;
      padding: 0 15px;
      background: #303030;
      color: white;
      height: 40px;


      &:hover {
        background: black;
      }
    }

    .navbar {
      z-index: 10;
      padding-top: 20px;
      // opacity: 0.6;
      background-color: rgba(0, 0, 0, 0) !important;

      .nav-link {
        &.active {
          color: #00bfff;
        }
      }
    }

  }

  .homepage-container {
    .homepage-content {
      padding: 100px;
      width: 50%;
      position: relative;
      display: flex;
      flex-direction: column;
      gap: 30px;

      .title-1 {
        font-size: 40px;
        font-weight: 600;
      }

      .title-2 {
        font-size: 25px;
      }

      .title-3 {
        button {
          border-radius: 10px;
          padding: 0 15px;
          background: #303030;
          color: white;
          height: 40px;
          border: none;


          &:hover {
            background: black;
          }
        }
      }
    }
  }
}

video {
  position: fixed;
  bottom: 0;
  width: 100vw;
}

